# spatial-navigation

./: .gitignore  .gitmodules  config.py  cspell.json  maces.py  main.py  plots.py  pyproject.toml  requirements.txt
configurations/: Vogels_et_al_2011.toml  balanced_network.toml  experiment_20250312.toml  experiment_20250327.toml  navigation_network.toml
data/: .gitignore
experiments/: Stoianov2022.toml  example_experiment.toml  stoianov_2022.toml
maps/: __init__.py  baseline.py  example.py
notebooks/: EHC-Navigation.ipynb  EIModel-Balanced.ipynb  Encoders.ipynb  LIFCell-Recurrent.ipynb  LIFCell-Spiking.ipynb  STDP-Algorithms.ipynb  Vogels_et_al_2011.ipynb  baseline.ipynb  episodes.ipynb  example.ipynb  experiment_20250312.ipynb  experiment_20250320.ipynb  experiment_20250326.ipynb  experiment_20250327.ipynb  experiment_20250403.ipynb  experiment_20250424.ipynb  stoianov_2022.ipynb
notebooks/data/: img.pt
scripts/: gen-experiment.py  run-mace.py
spnav/: __init__.py  config.py  control.py  env.py  environment.py  utils.py
spnav/maces/: __init__.py  baseline.py  example.py
spnav/maps/: __init__.py  baseline.py  example.py
